<resources>
    <string name="app_name">Social Buddies</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login_edittext_email">Email</string>
    <string name="activity_login_edittext_contrasena">Contraseña</string>
    <string name="activity_login_button_inicia">Iniciar sesión</string>
    <string name="activity_login_textview_registro">¿No tienes cuenta? Registrate</string>
    <string name="activity_login_button_facebook">Inicia con Facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="medium_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="nueva_publicaci_n">Nueva Publicación</string>
    <string name="contenido_de_la_publicacion_opcional">Contenido de la Publicacion (Opcional)</string>

    <string name="facebook_app_id">553370105121873</string>
    <string name="fb_login_protocol_scheme">fb553370105121873</string>
</resources>
